fix layout issue with healthsciences openid login page

--- a/plugins/themes/healthSciences-child/styles/openid.less
+++ b/plugins/themes/healthSciences-child/styles/openid.less
@@ -43,9 +43,12 @@
       margin-right: .5em;
     }
     
+    & .optin label,
     & .consent label input, 
     & .reviewer label input {
+      display: block;
       flex: none;
+      margin-right: 0;
     }
     
     & button.submit {
